// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-supertest project creates expected package.json 1`] = `
"{
  \\"name\\": \\"TestingProject\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Example\\",
  \\"engines\\": {
    \\"node\\": \\"8.9.12\\",
    \\"npm\\": \\"6.4.1\\"
  },
  \\"scripts\\": {
    \\"console\\": \\"node console.js\\",
    \\"cover\\": \\"npm run test --coverage\\",
    \\"test\\": \\"NODE_ENV=testing jest --runInBand --forceExit --detectOpenHandles\\",
    \\"test-inspect\\": \\"NODE_ENV=testing node --inspect --debug-brk jest\\",
    \\"eslint-check\\": \\"eslint --print-config .eslintrc.js --ignore-pattern ./.eslintrc.js | eslint-config-prettier-check\\",
    \\"lint\\": \\"eslint \\\\\\"**/*.js\\\\\\" --ignore-pattern ./.eslintrc.js\\",
    \\"lint-diff\\": \\"git diff --name-only --cached --relative | grep \\\\\\\\\\\\\\\\.js$ | xargs eslint\\",
    \\"lint-fix\\": \\"eslint \\\\\\"**/*.js\\\\\\" --fix --ignore-pattern ./.eslintrc.js\\",
    \\"precommit\\": \\"npm run lint-diff\\",
    \\"outdated\\": \\"npm outdated --depth 0\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"start-dev\\": \\"nodemon --inspect server.js\\",
    \\"prestart-dev\\": \\"npm run lint\\",
    \\"start\\": \\"node server.js\\"
  },
  \\"cacheDirectories\\": [
    \\"node_modules\\"
  ],
  \\"main\\": \\"app.js\\",
  \\"author\\": \\"Wolox\\",
  \\"homepage\\": \\"https://test.com.ar\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://test.com.ar.git\\"
  },
  \\"bugs\\": {
    \\"url\\": \\"https://test.com.ar/issues\\",
    \\"email\\": \\"tls@wolox.com.ar\\"
  },
  \\"jest\\": {
    \\"coverageThreshold\\": {
      \\"global\\": {
        \\"branches\\": 80,
        \\"functions\\": 80,
        \\"lines\\": 80,
        \\"statements\\": 80
      }
    },
    \\"collectCoverageFrom\\": [
      \\"**/*.js\\",
      \\"!**/console.js\\",
      \\"!**/node_modules/**\\",
      \\"!**/build/**\\",
      \\"!**/migrations/**\\",
      \\"!**/config/**\\",
      \\"!**/scripts/**\\"
    ],
    \\"setupFilesAfterEnv\\": [
      \\"<rootDir>/test/setup.js\\"
    ],
    \\"testEnvironment\\": \\"node\\",
    \\"transform\\": {
      \\"^.+\\\\\\\\.js$\\": \\"babel-jest\\"
    }
  },
  \\"dependencies\\": {
    \\"bcryptjs\\": \\"^2.4.3\\",
    \\"body-parser\\": \\"^1.18.2\\",
    \\"express\\": \\"^4.16.2\\",
    \\"jwt-simple\\": \\"^0.5.1\\",
    \\"umzug\\": \\"^2.1.0\\",
    \\"express-wolox-logger\\": \\"1.1.0\\",
    \\"swagger-ui-express\\": \\"^4.0.7\\"
  },
  \\"devDependencies\\": {
    \\"babel\\": \\"6.23.0\\",
    \\"babel-core\\": \\"6.26.0\\",
    \\"babel-eslint\\": \\"^8.2.2\\",
    \\"babel-jest\\": \\"^23.6.0\\",
    \\"jest\\": \\"^24.0.0\\",
    \\"supertest\\": \\"^3.4.2\\",
    \\"babel-preset-es2015\\": \\"6.24.1\\",
    \\"dotenv\\": \\"^5.0.0\\",
    \\"eslint\\": \\"^5.9.0\\",
    \\"eslint-plugin-import\\": \\"^2.17.3\\",
    \\"eslint-plugin-prettier\\": \\"^3.0.1\\",
    \\"husky\\": \\"^0.14.3\\",
    \\"istanbul\\": \\"^0.4.3\\",
    \\"mocha\\": \\"^5.0.1\\",
    \\"mocha-lcov-reporter\\": \\"^1.2.0\\",
    \\"nodemon\\": \\"^1.18.7\\",
    \\"prettier\\": \\"^1.15.3\\",
    \\"prettier-eslint\\": \\"^8.8.2\\",
    \\"prompt\\": \\"^1.0.0\\",
    \\"eslint-config-wolox\\": \\"^3.0.2\\",
    \\"eslint-config-wolox-node\\": \\"^2.2.0\\"
  }
}
"
`;

exports[`jest-supertest project creates expected package.json 2`] = `
"{
  \\"name\\": \\"TestingProject\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Example\\",
  \\"engines\\": {
    \\"node\\": \\"8.9.12\\",
    \\"npm\\": \\"6.4.1\\"
  },
  \\"scripts\\": {
    \\"console\\": \\"node console.js\\",
    \\"cover\\": \\"npm run test --coverage\\",
    \\"test\\": \\"NODE_ENV=testing jest --runInBand --forceExit --detectOpenHandles\\",
    \\"test-inspect\\": \\"NODE_ENV=testing node --inspect --debug-brk jest\\",
    \\"eslint-check\\": \\"eslint --print-config .eslintrc.js --ignore-pattern ./.eslintrc.js | eslint-config-prettier-check\\",
    \\"lint\\": \\"eslint \\\\\\"**/*.js\\\\\\" --ignore-pattern ./.eslintrc.js\\",
    \\"lint-diff\\": \\"git diff --name-only --cached --relative | grep \\\\\\\\\\\\\\\\.js$ | xargs eslint\\",
    \\"lint-fix\\": \\"eslint \\\\\\"**/*.js\\\\\\" --fix --ignore-pattern ./.eslintrc.js\\",
    \\"precommit\\": \\"npm run lint\\",
    \\"outdated\\": \\"npm outdated --depth 0\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"prestart\\": \\"npm run lint\\",
    \\"start\\": \\"nodemon --inspect server.js\\"
  },
  \\"cacheDirectories\\": [
    \\"node_modules\\"
  ],
  \\"main\\": \\"app.js\\",
  \\"author\\": \\"Wolox\\",
  \\"homepage\\": \\"https://github.com/gonziesc/express-graphql-bootstrap.git\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://github.com/gonziesc/express-graphql-bootstrap.git.git\\"
  },
  \\"bugs\\": {
    \\"url\\": \\"https://github.com/gonziesc/express-graphql-bootstrap.git/issues\\",
    \\"email\\": \\"tls@wolox.com.ar\\"
  },
  \\"jest\\": {
    \\"collectCoverageFrom\\": [
      \\"**/*.js\\",
      \\"!**/console.js\\",
      \\"!**/node_modules/**\\",
      \\"!**/build/**\\",
      \\"!**/migrations/**\\",
      \\"!**/config/**\\",
      \\"!**/scripts/**\\",
      \\"!**/docs/**\\"
    ],
    \\"setupFilesAfterEnv\\": [
      \\"<rootDir>/test/setup.js\\"
    ],
    \\"testEnvironment\\": \\"node\\",
    \\"transform\\": {
      \\"^.+\\\\\\\\.js$\\": \\"babel-jest\\"
    }
  },
  \\"dependencies\\": {
    
    \\"body-parser\\": \\"^1.18.2\\",
    \\"express\\": \\"^4.16.2\\",
    \\"jwt-simple\\": \\"^0.5.1\\",
    \\"umzug\\": \\"^2.1.0\\",
    \\"express-wolox-logger\\": \\"1.1.0\\",
    \\"swagger-ui-express\\": \\"^4.0.7\\",
    \\"apollo-server\\": \\"^2.4.8\\",
    \\"apollo-server-cache-redis\\": \\"^1.1.1\\",
    \\"axios\\": \\"^0.19.0\\",
    \\"graphql\\": \\"^14.2.1\\",
    \\"graphql-middleware\\": \\"^3.0.2\\",
    \\"graphql-tools\\": \\"^4.0.4\\",
    \\"lodash.merge\\": \\"^4.6.2\\"
  },
  \\"devDependencies\\": {
    \\"babel\\": \\"6.23.0\\",
    \\"babel-core\\": \\"6.26.0\\",
    \\"babel-eslint\\": \\"^8.2.2\\",
    \\"babel-jest\\": \\"^23.6.0\\",
    \\"jest\\": \\"^24.0.0\\",
    \\"supertest\\": \\"^3.4.2\\",
    \\"babel-preset-es2015\\": \\"6.24.1\\",
    \\"apollo-server-testing\\": \\"^2.5.0\\",
    \\"chance\\": \\"^1.0.18\\",
    \\"dotenv\\": \\"^5.0.0\\",
    \\"eslint\\": \\"^5.9.0\\",
    \\"eslint-config-airbnb-base\\": \\"^12.0.2\\",
    \\"eslint-config-prettier\\": \\"^2.3.1\\",
    \\"eslint-config-wolox\\": \\"^2.2.1\\",
    \\"eslint-config-wolox-node\\": \\"^1.0.0\\",
    \\"eslint-plugin-import\\": \\"^2.6.1\\",
    \\"eslint-plugin-prettier\\": \\"^3.0.1\\",
    \\"factory-girl\\": \\"^5.0.4\\",
    \\"faker\\": \\"^4.1.0\\",
    \\"husky\\": \\"^0.14.3\\",
    \\"ioredis\\": \\"^4.14.0\\",
    \\"istanbul\\": \\"^0.4.3\\",
    \\"mocha\\": \\"^5.0.1\\",
    \\"mocha-lcov-reporter\\": \\"^1.2.0\\",
    \\"nodemon\\": \\"^1.18.7\\",
    \\"prettier\\": \\"^1.15.3\\",
    \\"prettier-eslint\\": \\"^8.8.2\\",
    \\"prompt\\": \\"^1.0.0\\",
    \\"redis\\": \\"^2.8.0\\",
    \\"sequelize-cli\\": \\"^5.5.0\\"
  }
}
"
`;

exports[`mocha-cha project creates expected package.json 1`] = `
"{
  \\"name\\": \\"TestingProject\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Example\\",
  \\"engines\\": {
    \\"node\\": \\"8.9.12\\",
    \\"npm\\": \\"6.4.1\\"
  },
  \\"scripts\\": {
    \\"console\\": \\"node console.js\\",
    \\"eslint-check\\": \\"eslint --print-config .eslintrc.js --ignore-pattern ./.eslintrc.js | eslint-config-prettier-check\\",
    \\"lint\\": \\"eslint \\\\\\"**/*.js\\\\\\" --ignore-pattern ./.eslintrc.js\\",
    \\"lint-diff\\": \\"git diff --name-only --cached --relative | grep \\\\\\\\\\\\\\\\.js$ | xargs eslint\\",
    \\"lint-fix\\": \\"eslint \\\\\\"**/*.js\\\\\\" --fix --ignore-pattern ./.eslintrc.js\\",
    \\"precommit\\": \\"npm run lint-diff\\",
    \\"outdated\\": \\"npm outdated --depth 0\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"start-dev\\": \\"nodemon --inspect server.js\\",
    \\"prestart-dev\\": \\"npm run lint\\",
    \\"start\\": \\"node server.js\\"
  },
  \\"cacheDirectories\\": [
    \\"node_modules\\"
  ],
  \\"main\\": \\"app.js\\",
  \\"author\\": \\"Wolox\\",
  \\"homepage\\": \\"https://test.com.ar\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://test.com.ar.git\\"
  },
  \\"bugs\\": {
    \\"url\\": \\"https://test.com.ar/issues\\",
    \\"email\\": \\"tls@wolox.com.ar\\"
  },
  \\"dependencies\\": {
    \\"bcryptjs\\": \\"^2.4.3\\",
    \\"body-parser\\": \\"^1.18.2\\",
    \\"express\\": \\"^4.16.2\\",
    \\"jwt-simple\\": \\"^0.5.1\\",
    \\"umzug\\": \\"^2.1.0\\",
    \\"express-wolox-logger\\": \\"1.1.0\\",
    \\"swagger-ui-express\\": \\"^4.0.7\\"
  },
  \\"devDependencies\\": {
    \\"babel\\": \\"6.23.0\\",
    \\"babel-core\\": \\"6.26.0\\",
    \\"babel-eslint\\": \\"^8.2.2\\",
    \\"babel-preset-es2015\\": \\"6.24.1\\",
    \\"dotenv\\": \\"^5.0.0\\",
    \\"eslint\\": \\"^5.9.0\\",
    \\"eslint-plugin-import\\": \\"^2.17.3\\",
    \\"eslint-plugin-prettier\\": \\"^3.0.1\\",
    \\"husky\\": \\"^0.14.3\\",
    \\"istanbul\\": \\"^0.4.3\\",
    \\"mocha\\": \\"^5.0.1\\",
    \\"mocha-lcov-reporter\\": \\"^1.2.0\\",
    \\"nodemon\\": \\"^1.18.7\\",
    \\"prettier\\": \\"^1.15.3\\",
    \\"prettier-eslint\\": \\"^8.8.2\\",
    \\"prompt\\": \\"^1.0.0\\",
    \\"eslint-config-wolox\\": \\"^3.0.2\\",
    \\"eslint-config-wolox-node\\": \\"^2.2.0\\"
  }
}
"
`;

exports[`mocha-cha project creates expected package.json 2`] = `
"{
  \\"name\\": \\"TestingProject\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Example\\",
  \\"engines\\": {
    \\"node\\": \\"8.9.12\\",
    \\"npm\\": \\"6.4.1\\"
  },
  \\"scripts\\": {
    \\"console\\": \\"node console.js\\",
    \\"eslint-check\\": \\"eslint --print-config .eslintrc.js --ignore-pattern ./.eslintrc.js | eslint-config-prettier-check\\",
    \\"lint\\": \\"eslint \\\\\\"**/*.js\\\\\\" --ignore-pattern ./.eslintrc.js\\",
    \\"lint-diff\\": \\"git diff --name-only --cached --relative | grep \\\\\\\\\\\\\\\\.js$ | xargs eslint\\",
    \\"lint-fix\\": \\"eslint \\\\\\"**/*.js\\\\\\" --fix --ignore-pattern ./.eslintrc.js\\",
    \\"precommit\\": \\"npm run lint\\",
    \\"outdated\\": \\"npm outdated --depth 0\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"prestart\\": \\"npm run lint\\",
    \\"start\\": \\"nodemon --inspect server.js\\"
  },
  \\"cacheDirectories\\": [
    \\"node_modules\\"
  ],
  \\"main\\": \\"app.js\\",
  \\"author\\": \\"Wolox\\",
  \\"homepage\\": \\"https://github.com/gonziesc/express-graphql-bootstrap.git\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://github.com/gonziesc/express-graphql-bootstrap.git.git\\"
  },
  \\"bugs\\": {
    \\"url\\": \\"https://github.com/gonziesc/express-graphql-bootstrap.git/issues\\",
    \\"email\\": \\"tls@wolox.com.ar\\"
  },
  \\"dependencies\\": {
    
    \\"body-parser\\": \\"^1.18.2\\",
    \\"express\\": \\"^4.16.2\\",
    \\"jwt-simple\\": \\"^0.5.1\\",
    \\"umzug\\": \\"^2.1.0\\",
    \\"express-wolox-logger\\": \\"1.1.0\\",
    \\"swagger-ui-express\\": \\"^4.0.7\\",
    \\"apollo-server\\": \\"^2.4.8\\",
    \\"apollo-server-cache-redis\\": \\"^1.1.1\\",
    \\"axios\\": \\"^0.19.0\\",
    \\"graphql\\": \\"^14.2.1\\",
    \\"graphql-middleware\\": \\"^3.0.2\\",
    \\"graphql-tools\\": \\"^4.0.4\\",
    \\"lodash.merge\\": \\"^4.6.2\\"
  },
  \\"devDependencies\\": {
    \\"babel\\": \\"6.23.0\\",
    \\"babel-core\\": \\"6.26.0\\",
    \\"babel-eslint\\": \\"^8.2.2\\",
    \\"babel-preset-es2015\\": \\"6.24.1\\",
    \\"apollo-server-testing\\": \\"^2.5.0\\",
    \\"chance\\": \\"^1.0.18\\",
    \\"dotenv\\": \\"^5.0.0\\",
    \\"eslint\\": \\"^5.9.0\\",
    \\"eslint-config-airbnb-base\\": \\"^12.0.2\\",
    \\"eslint-config-prettier\\": \\"^2.3.1\\",
    \\"eslint-config-wolox\\": \\"^2.2.1\\",
    \\"eslint-config-wolox-node\\": \\"^1.0.0\\",
    \\"eslint-plugin-import\\": \\"^2.6.1\\",
    \\"eslint-plugin-prettier\\": \\"^3.0.1\\",
    \\"factory-girl\\": \\"^5.0.4\\",
    \\"faker\\": \\"^4.1.0\\",
    \\"husky\\": \\"^0.14.3\\",
    \\"ioredis\\": \\"^4.14.0\\",
    \\"istanbul\\": \\"^0.4.3\\",
    \\"mocha\\": \\"^5.0.1\\",
    \\"mocha-lcov-reporter\\": \\"^1.2.0\\",
    \\"nodemon\\": \\"^1.18.7\\",
    \\"prettier\\": \\"^1.15.3\\",
    \\"prettier-eslint\\": \\"^8.8.2\\",
    \\"prompt\\": \\"^1.0.0\\",
    \\"redis\\": \\"^2.8.0\\",
    \\"sequelize-cli\\": \\"^5.5.0\\"
  }
}
"
`;
